--- a/.github/workflows/sync-free.yml
+++ b/.github/workflows/sync-free.yml
@@ -20,6 +20,6 @@ jobs:
         with:
           src: github/JDHelloWorld
           dst: gitee/tm306
-          static_list: "JDNEW"
+          static_list: "jd_scripts"
           dst_key: ${{ secrets.GITEE_PRIVATE_KEY }}
           dst_token: ${{ secrets.GITEE_TOKEN }}
